# raytracing

./: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Light.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  README.html  README.md  Ray.hpp  Renderer.cpp  Renderer.cu  Renderer.cuh  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  camera.hpp  global.hpp  main.cpp  scene_parser.cpp  scene_parser.hpp  texture.cpp  texture.hpp
include/vecmath/include/: Matrix3f.h  Vector3f.h
include/vecmath/src/: Matrix3f.cpp  Matrix4f.cpp  Quat4f.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
models/newell_teaset/: README.md
scene/: scene.txt  scene2.txt  scene3.txt  scene5.txt
